k8s-platform-v2/04-catalog/charts/gen/unity-catalog.yaml
---
# Source: unitycatalog/templates/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "unity-catalog-unitycatalog-server"
  labels:
    helm.sh/chart: unitycatalog-0.0.1-pre.1
    app.kubernetes.io/version: "main"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "unitycatalog"
    app.kubernetes.io/component: "server"
    app.kubernetes.io/instance: "unity-catalog"
spec:
  type: "ClusterIP"
  ports:
    - port: 8080
      targetPort: api
      protocol: TCP
      name: api
  selector:
    app.kubernetes.io/name: "unitycatalog"
    app.kubernetes.io/component: "server"
    app.kubernetes.io/instance: "unity-catalog"
---
# Source: unitycatalog/templates/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unity-catalog-unitycatalog-ui
  labels:
    helm.sh/chart: unitycatalog-0.0.1-pre.1
    app.kubernetes.io/version: "main"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "unitycatalog"
    app.kubernetes.io/component: "ui"
    app.kubernetes.io/instance: "unity-catalog"
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: ui
      protocol: TCP
      name: ui
  selector:
    app.kubernetes.io/name: "unitycatalog"
    app.kubernetes.io/component: "ui"
    app.kubernetes.io/instance: "unity-catalog"
---
# Source: unitycatalog/templates/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "unity-catalog-unitycatalog-server"
  labels:
    helm.sh/chart: unitycatalog-0.0.1-pre.1
    app.kubernetes.io/version: "main"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "unitycatalog"
    app.kubernetes.io/component: "server"
    app.kubernetes.io/instance: "unity-catalog"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "unitycatalog"
      app.kubernetes.io/component: "server"
      app.kubernetes.io/instance: "unity-catalog"
  template:
    metadata:
      annotations:
        checksum/serverConfig: "2fd426bf1118d18fba03969d89d96bb8e52f6515349fc090fdd65cb934ae0bee"
        checksum/hibernateConfig: "082a79515c789cde9a8fa18eba0095850e15e39c767594f343a1948ec2f8c258"
        checksum/log4j2Config: "cfdb47e6f174bf079c2cd6a0597aca6ac8ddd338ad8988d191f046c6e4bd23b2"
      labels:
        helm.sh/chart: unitycatalog-0.0.1-pre.1
        app.kubernetes.io/version: "main"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/name: "unitycatalog"
        app.kubernetes.io/component: "server"
        app.kubernetes.io/instance: "unity-catalog"
    spec:
      serviceAccountName: "default"
      securityContext:
        fsGroup: 101
      containers:
        - name: server
          image: "unitycatalog/unitycatalog:main"
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: api
              containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: api
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 30 # 5 minutes

          volumeMounts:
            - name: config-volume
              mountPath: /home/unitycatalog/etc/conf
            - name: db-volume
              mountPath: /home/unitycatalog/etc/db
      volumes:
        - configMap:
            name: "unity-catalog-unitycatalog-server-config-templates"
          name: config-templates
        - name: config-volume
          emptyDir: {}
        - name: jwt-key-volume
          secret:
            secretName: "unity-catalog-unitycatalog-server-jwt-key"
        - name: db-volume
          persistentVolumeClaim:
            claimName: "unity-catalog-unitycatalog-server-db"
  strategy:
    type: Recreate
---
# Source: unitycatalog/templates/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "unity-catalog-unitycatalog-ui"
  labels:
    helm.sh/chart: unitycatalog-0.0.1-pre.1
    app.kubernetes.io/version: "main"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "unitycatalog"
    app.kubernetes.io/component: "ui"
    app.kubernetes.io/instance: "unity-catalog"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "unitycatalog"
      app.kubernetes.io/component: "ui"
      app.kubernetes.io/instance: "unity-catalog"
  template:
    metadata:
      labels:
        helm.sh/chart: unitycatalog-0.0.1-pre.1
        app.kubernetes.io/version: "main"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/name: "unitycatalog"
        app.kubernetes.io/component: "ui"
        app.kubernetes.io/instance: "unity-catalog"
    spec:
      serviceAccountName: "default"
      containers:
        - name: ui
          image: "unitycatalog/unitycatalog-ui:main"
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: ui
              containerPort: 3000
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: ui
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 30 # 5 minutes

          command:
            - /bin/bash
            - -c
            - |-
              jq '.proxy = null' package.json > temp.json
              mv temp.json package.json
              yarn start
---
# Source: unitycatalog/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "unity-catalog-unitycatalog"
  labels:
    helm.sh/chart: unitycatalog-0.0.1-pre.1
    app.kubernetes.io/version: "main"
    app.kubernetes.io/managed-by: "Helm"
spec:
  rules:
    - host: 
      http:
        paths:
          - path: "/api"
            pathType: "Prefix"
            backend:
              service:
                name: "unity-catalog-unitycatalog-server"
                port:
                  name: api
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "unity-catalog-unitycatalog-ui"
                port:
                  name: ui
